add divider for laptops

--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
     </div> 
     </section>
 
-    <section class='laptops'></section>
+    <section class="laptops-section">
+<div  class='laptops'>
+
+
+    <div class='laptops-divider'></div>
+
+</div>
+
+
+    </section>
     <section></section>
 </body>
 </html>
