create laptops section

--- a/index.html
+++ b/index.html
@@ -16,10 +16,37 @@
     </section>
 
     <section class="laptops-section">
-<div  class='laptops'>
-
-
     <div class='laptops-divider'></div>
+
+<div  class='laptops'>
+<div class="card">
+    <h2 class="secondary-card-title">Hızlıca</h2>
+    <h2 class="primary-card-title">Üye Ol</h2>
+    <img src="./assets/laptop-1.png" alt="" class="card-image">
+    <p class="card-text">Birkaç adımda üye olun, hızlıca giriş yapın ve üyeliğiniz onaylayın</p>
+</div>
+
+<div class="card">
+    <h2 class="secondary-card-title">Kolayca</h2>
+    <h2 class="primary-card-title">Para Yatır</h2>
+    <img src="./assets/laptop-2.png" alt="" class="card-image">
+    <p class="card-text">İster bankadan Havale/EFT İster ödeme kuruluşundan TL gönderin</p>
+</div>
+
+<div class="card">
+    <h2 class="secondary-card-title">Doğru </h2>
+    <h2 class="primary-card-title">Analiz Yap</h2>
+    <img src="./assets/laptop-3.png" alt="" class="card-image">
+    <p class="card-text">Lorem ipsum dolor sit amet, consectetuer Lorem ipsu</p>
+</div>
+
+<div class="card">
+    <h2 class="secondary-card-title">Anında</h2>
+    <h2 class="primary-card-title">Satın Al</h2>
+    <img src="./assets/laptop-4.png" alt="" class="card-image">
+    <p class="card-text">Tek işlemde anında 25 bin TL'ye kadar Bitcoin alın</p>
+</div>
+
 
 </div>
 
