--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
     <section>
-      
+      <div>
         <h1 class="title">BitNeb Cyrpto Market</h1>
         <div class="title-divider">
     </div> 
+</div>
     </section>
 
     <section class="laptops-section">
@@ -52,6 +53,10 @@
 
 
     </section>
-    <section></section>
+
+    <section>
+        <button class='button'>Hemen Başlayın</button>
+
+    </section>
 </body>
 </html>
