--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BitNeb Cyrpto Market</title>
     <link rel="stylesheet" type="text/css" href="style.css"  />
+    <link rel="icon" href="./assets/ico.png">
 </head>
 <body>
     <section>
