make logo and button

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
 
     </section>
 
-    <section>
+    <section class="button-section">
         <button class='button'>Hemen Başlayın</button>
 
     </section>
         <footer>
             <div class="footer-content">
-            <img src="./assets/BitNeb-logo.png" alt="BitNeb Logo">
+            <img class='footer-logo'src="./assets/BitNeb-logo.png" alt="BitNeb Logo">
 <div class="footer-divider"></div>
                 <header><h1 class="footer-header">Farklı Kriptoparalar ve Limit/Stop Emirleri Kullanın</h1>
                 <p class='footer-text'>SkyNeb farklı kriptoparalar,gerçek zamanlı grafikler, grafik analizi araçları ve indikatörler ile profesyoneller için gelişmiş bir alım satım deneyimi sunar.</p>
