--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <p class='footer-text'>SkyNeb farklı kriptoparalar,gerçek zamanlı grafikler, grafik analizi araçları ve indikatörler ile profesyoneller için gelişmiş bir alım satım deneyimi sunar.</p>
             
         </header>
-        <button class='button'>Hemen Başlayın</button>
+        <button class='footer-button'>Hemen Başlayın</button>
         
     </div>
 </footer>
